# projeto-grafos

./: .dockerignore  Dockerfile  README.md  docker-compose.deploy.yaml  docker-compose.dev.yaml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
data/: Passo_2_Parte_1___Projeto_Grafos.ipynb  adjacencias_bairros.csv  bairros_unique.csv  enderecos.csv  parte2_adjacencias.csv  spotify.csv  spotify_filtered.csv
frontend/: .gitignore  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.jsx  App.tsx  env.d.ts  index.css
frontend/src/api/: client.ts  grafo.ts
frontend/src/components/Dijkstra/: DijkstraForm.tsx  PathResult.tsx
frontend/src/components/Graph/: GraphView.tsx
frontend/src/components/Metrics/: MetricsPanel.tsx
frontend/src/pages/: Dashboard.tsx  DijkstraRunner.tsx  GraphExplorer.tsx
frontend/src/utils/: types.ts
src/: cli.py  config.py  solve.py
src/graphs/: algorithms.py  exporters.py  graph.py  io.py  music_graph.py  part2_build.py  part2_io.py  part2_visualize.py
src/web/: api.py  deps.py
tests/: test_graph.py
