[project]
name = "projeto-grafos"
version = "0.1.0"
description = ""
authors = [
    {name = "arthurCapistrano",email = "arthur.capistrano12@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "pyvis (>=0.3.2,<0.4.0)",
    "plotly (>=6.3.0,<7.0.0)",
    "streamlit (>=1.49.1,<2.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "ignr (>=2.2,<3.0)"
]

[tool.poetry]
packages = [{include = "projeto-grafos", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
